--- a/src/app/customer/about-companny/about-companny.component.html
+++ b/src/app/customer/about-companny/about-companny.component.html
@@ -1,1 +1,138 @@
-<p>about-companny works!</p>
+<app-search></app-search>
+<!-- ##### Main Content Wrapper Start ##### -->
+<div class="main-content-wrapper d-flex clearfix">
+
+  <!-- Mobile Nav (max width 767px)-->
+  <div class="mobile-nav">
+    <!-- Navbar Brand -->
+    <div class="amado-navbar-brand ">
+      <a href="newhouse/home"><img src="assets/img/core-img/logo_newhouse_long.jpg" alt=""></a>
+    </div>
+    <!-- Navbar Toggler -->
+    <div class="amado-navbar-toggler">
+      <span></span><span></span><span></span>
+    </div>
+  </div>
+
+  <app-sidebar></app-sidebar>
+  <div class="products-catagories-area clearfix ">
+    <div class="amado-pro-catagory clearfix">
+
+      <!-- Container (About Section) -->
+      <div id="about" class="container-fluid">
+        <div class="row">
+          <div class="col-sm-8">
+            <h2>Giới Thiệu Công Ty</h2><br>
+            <h4>
+              Hiểu được tầm quan trọng của  một không gian sống tác động rất mạnh mẽ chất lượng cuộc sống cũng như phong cách làm việc của mỗi người tại nhà và tại nơi làm việc. Chúng tôi với các sản phẩm Decor nhà cửa, văn phòng, quán cafe...sẽ góp phần nào đó tô điểm thêm các điểm nhấn theo theo mỗi một phong cách riêng biệt.
+            </h4><br>
+            <p>
+               Với đội ngũ kiến trúc sư có tầm và có tâm và những đôi bàn tay khéo léo của thợ lành nghề với sự trợ giúp của công nhệ tiên tiến chúng tôi tin tưởng có thể hoàn toàn mang lại các sản phẩm đáp ứng được yêu cầu của quý khách hàng dù là kỹ tính nhất. Với kim chỉ nam là " luôn học hỏi đổi mới và dẫn đầu" chúng tôi rất mong được phụ vụ quý khách
+            </p>
+            <br><button class="btn btn-default btn-lg">Khám Phá</button>
+          </div>
+          <div class="col-sm-4">
+            <span class="glyphicon glyphicon-signal logo"></span>
+          </div>
+        </div>
+      </div>
+
+
+
+<!--      <div class="container-fluid bg-grey">-->
+<!--        <div class="row">-->
+<!--          <div class="col-sm-4">-->
+<!--            <span class="glyphicon glyphicon-globe logo slideanim"></span>-->
+<!--          </div>-->
+<!--          <div class="col-sm-8">-->
+<!--            <h2>Giá trị</h2><br>-->
+<!--            <h4><strong>Nhiệm vụ:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>-->
+<!--            <p><strong>Tầm nhìn:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.-->
+<!--              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--      &lt;!&ndash; Container (Services Section) &ndash;&gt;-->
+<!--      <div id="services" class="container-fluid text-center">-->
+<!--        <h2>Dịch vụ</h2>-->
+<!--        <h4>What we offer</h4>-->
+<!--        <br>-->
+<!--        <div class="row">-->
+<!--          <div class="col-sm-4">-->
+<!--            <span class="glyphicon glyphicon-off logo-small"></span>-->
+<!--            <h4>POWER</h4>-->
+<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--          </div>-->
+<!--          <div class="col-sm-4">-->
+<!--            <span class="glyphicon glyphicon-heart logo-small"></span>-->
+<!--            <h4>LOVE</h4>-->
+<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--          </div>-->
+<!--          <div class="col-sm-4">-->
+<!--            <span class="glyphicon glyphicon-lock logo-small"></span>-->
+<!--            <h4>JOB DONE</h4>-->
+<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <br><br>-->
+<!--        <div class="row ">-->
+<!--          <div class="col-sm-4">-->
+<!--            <span class="glyphicon glyphicon-leaf logo-small"></span>-->
+<!--            <h4>GREEN</h4>-->
+<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--          </div>-->
+<!--          <div class="col-sm-4">-->
+<!--            <span class="glyphicon glyphicon-certificate logo-small"></span>-->
+<!--            <h4>CERTIFIED</h4>-->
+<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--          </div>-->
+<!--          <div class="col-sm-4">-->
+<!--            <span class="glyphicon glyphicon-wrench logo-small"></span>-->
+<!--            <h4 style="color:#303030;">HARD WORK</h4>-->
+<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+      <div id="contact" class="container-fluid bg-grey">
+        <h2 class="text-center">Liên hệ với chúng tôi</h2>
+        <div class="row">
+          <div class="col-sm-5">
+            <p>Hãy liên lạc với chúng tôi. chúng tôi sẽ trả lời ngay trong 30 phut</p>
+            <p><span class="glyphicon glyphicon-map-marker"></span> Liệp Tuyết -Quốc Oai-Hà Nội</p>
+            <p><span class="glyphicon glyphicon-phone"></span> +090999999</p>
+            <p><span class="glyphicon glyphicon-envelope"></span> vutapbka@gmail.com</p>
+            <p><span class="glyphicon glyphicon-envelope">
+
+            </span>
+              <a class="mr-30" href="https://zalo.me/0397312493"><img src="assets/img/core-img/zaloLogo.jpg"  width="60px" alt=""></a>
+              <a href="https://zalo.me/0397312493"><img src="assets/img/core-img/ms_logo.png"  width="50px" alt=""></a>
+            </p>
+          </div>
+          <div class="col-sm-6 ml-30">
+            <div class="row">
+              <div class="col-sm-6 form-group">
+                <input class="form-control" id="name" name="name" placeholder="Tên" type="text" required>
+              </div>
+              <div class="col-sm-6 form-group">
+                <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+              </div>
+            </div>
+            <textarea class="form-control" id="comments" name="comments" placeholder="Tin nhắn" rows="5"></textarea><br>
+            <div class="row">
+              <div class="col-sm-12 form-group">
+                <button class="btn btn-default pull-right" type="submit">Gửi</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- ##### Main Content Wrapper End ##### -->
+<!--<app-newsletter></app-newsletter>-->
+<app-footer></app-footer>
