--- a/src/app/customer/carts-table/carts-table.component.html
+++ b/src/app/customer/carts-table/carts-table.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 
- <app-sidebar></app-sidebar>
+  <app-sidebar [cartLengthChild]="cartLength" ></app-sidebar>
 
   <div class="cart-table-area section-padding-100">
     <div class="container-fluid">
