--- a/src/app/customer/product/product-list/product-list.component.html
+++ b/src/app/customer/product/product-list/product-list.component.html
@@ -87,8 +87,8 @@
 
       </div>
 
-      <div class="row mb-30 align-items-center">
-        <div class="col-12">
+      <div class="row mb-30 align-items-center" *ngIf="categoryId==0">
+        <div class="col-12 align-items-center">
           <!-- Pagination -->
           <nav aria-label="navigation">
             <ul class="pagination justify-content-end mt-50">
