--- a/src/app/customer/share/footer/footer.component.html
+++ b/src/app/customer/share/footer/footer.component.html
@@ -27,11 +27,11 @@
                     <a class="nav-link" href="index.html">Trang chủ </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="shop.html">sản phẩm</a>
+                    <a class="nav-link" href="newhouse/shop/0">sản phẩm</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cart.html">Bán chạy</a>
-                  </li>
+<!--                  <li class="nav-item">-->
+<!--                    <a class="nav-link" href="cart.html">Bán chạy</a>-->
+<!--                  </li>-->
                   <li class="nav-item">
                     <a class="nav-link" href="checkout.html">Về công ty</a>
                   </li>
