--- a/src/app/admin/order/order-list/order-list.component.html
+++ b/src/app/admin/order/order-list/order-list.component.html
@@ -53,7 +53,7 @@
                       <div *ngFor="let x of order.optionList">{{x.name}}</div>
                     </td>
                     <td>
-                      <img src="http://localhost:8080/image/{{order.product.image01}}" alt="" width="50px">
+                      <img src="{{imgUrl}}{{order.product.image01}}" alt="" width="50px">
                       </td>
                     <td>{{order.quantity}}</td>
                     <td>{{order.CreateDate}}</td>
