--- a/src/app/customer/product/product-detail/product-detail.component.html
+++ b/src/app/customer/product/product-detail/product-detail.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-<app-sidebar></app-sidebar>
+<app-sidebar [cartLengthChild]="cartLength" ></app-sidebar>
 
   <!-- Product Details Area Start -->
   <div class="single-product-area section-padding-100 clearfix">
