--- a/src/app/customer/about-companny/about-companny.component.html
+++ b/src/app/customer/about-companny/about-companny.component.html
@@ -29,7 +29,7 @@
             <p>
                Với đội ngũ kiến trúc sư có tầm và có tâm và những đôi bàn tay khéo léo của thợ lành nghề với sự trợ giúp của công nhệ tiên tiến chúng tôi tin tưởng có thể hoàn toàn mang lại các sản phẩm đáp ứng được yêu cầu của quý khách hàng dù là kỹ tính nhất. Với kim chỉ nam là " luôn học hỏi đổi mới và dẫn đầu" chúng tôi rất mong được phụ vụ quý khách
             </p>
-            <br><button class="btn btn-default btn-lg">Khám Phá</button>
+            <br> <button class="btn btn-default btn-lg">Mua hàng</button>
           </div>
           <div class="col-sm-4">
             <span class="glyphicon glyphicon-signal logo"></span>
@@ -53,21 +53,21 @@
 <!--        </div>-->
 <!--      </div>-->
 
-<!--      &lt;!&ndash; Container (Services Section) &ndash;&gt;-->
+      <!-- Container (Services Section) -->
 <!--      <div id="services" class="container-fluid text-center">-->
 <!--        <h2>Dịch vụ</h2>-->
-<!--        <h4>What we offer</h4>-->
+<!--        <h4>chúng tôi bán gì?</h4>-->
 <!--        <br>-->
 <!--        <div class="row">-->
 <!--          <div class="col-sm-4">-->
 <!--            <span class="glyphicon glyphicon-off logo-small"></span>-->
-<!--            <h4>POWER</h4>-->
-<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--            <h4>Đồng hồ</h4>-->
+<!--            <p>sản xuất đồng hồ handmade</p>-->
 <!--          </div>-->
 <!--          <div class="col-sm-4">-->
 <!--            <span class="glyphicon glyphicon-heart logo-small"></span>-->
-<!--            <h4>LOVE</h4>-->
-<!--            <p>Lorem ipsum dolor sit amet..</p>-->
+<!--            <h4>Tranh treo tường</h4>-->
+<!--            <p>sản xuất tranh treo tường canvas cao cấp để trang trí nhà cửa</p>-->
 <!--          </div>-->
 <!--          <div class="col-sm-4">-->
 <!--            <span class="glyphicon glyphicon-lock logo-small"></span>-->
@@ -98,19 +98,31 @@
       <div id="contact" class="container-fluid bg-grey">
         <h2 class="text-center">Liên hệ với chúng tôi</h2>
         <div class="row">
-          <div class="col-sm-5">
-            <p>Hãy liên lạc với chúng tôi. chúng tôi sẽ trả lời ngay trong 30 phut</p>
-            <p><span class="glyphicon glyphicon-map-marker"></span> Liệp Tuyết -Quốc Oai-Hà Nội</p>
-            <p><span class="glyphicon glyphicon-phone"></span> +090999999</p>
-            <p><span class="glyphicon glyphicon-envelope"></span> vutapbka@gmail.com</p>
+          <div class="col-sm-7">
+            <h4><span class="glyphicon glyphicon-phone"></span> NEWHOUSE MANUFACTURING AND TRADING CO.,LTD</h4>
             <p><span class="glyphicon glyphicon-envelope">
+            Địa chỉ: Đội 8 Thôn Vĩnh Phúc, Xã Liệp Tuyết, Huyện Quốc Oai, Thành phố Hà Nội.
+            </span></p>
+            <p><span class="glyphicon glyphicon-envelope">
+            Mã số thuế: 0110179159
+            </span></p>
+            <p><span class="glyphicon glyphicon-envelope">
+            Người đại diện:	VŨ VĂN TẬP
+            </span></p>
+            <p><span class="glyphicon glyphicon-phone"></span> Địa chỉ xưởng sản xuất:</p>
+            <p><span class="glyphicon glyphicon-phone"></span>
+              Cơ sở 1: Liền kề 06-02 khu đô thị An Hưng, Dương Nội, Hà Đông, Hà Nội.</p>
+            <p><span class="glyphicon glyphicon-phone"></span>
+              Cơ sở 2: Xóm 3, Đông La, Hoài Đức, Hà Nội</p>
+            <p><span class="glyphicon glyphicon-phone"></span>
+              Hotline: 0375.113.000</p>
+            <div> Liên hệ:</div>
+            <a class="mr-30 " href="https://zalo.me/0375113000"><img src="assets/img/core-img/zaloLogo.jpg"  width="30px" alt=""> Zalo</a>
+            <a class="mr-30 " href="https://www.facebook.com/newhousecanvas"><img src="assets/img/core-img/facebook.png"  width="30px" alt=""> Tranh Treo Tường Canvas Cao Cấp</a>
+            <a class="mr-30 " href="https://www.facebook.com/daldecorloveu"><img src="assets/img/core-img/facebook.png"  width="30px" alt=""> Đồng hồ decor</a>
 
-            </span>
-              <a class="mr-30" href="https://zalo.me/0397312493"><img src="assets/img/core-img/zaloLogo.jpg"  width="60px" alt=""></a>
-              <a href="https://zalo.me/0397312493"><img src="assets/img/core-img/ms_logo.png"  width="50px" alt=""></a>
-            </p>
           </div>
-          <div class="col-sm-6 ml-30">
+          <div class="col-sm-4 ml-30">
             <div class="row">
               <div class="col-sm-6 form-group">
                 <input class="form-control" id="name" name="name" placeholder="Tên" type="text" required>
