--- a/src/app/customer/history/history.component.html
+++ b/src/app/customer/history/history.component.html
@@ -109,7 +109,14 @@
             <!-- /.card -->
 
           </div>
-
+          <div class="cart-btn text-center col-12 mb-20">
+            <table class="col-12 align-items-center">
+              <tr>
+                <td> <a routerLink="/newhouse/shop/0" class="btn btn-warning mr-30 width-100">
+                  <i class="fa-solid fa-turn-down-left">Quay lại</i>  </a></td>
+              </tr>
+            </table>
+          </div>
           <!-- /.col -->
         </div>
 
