--- a/src/app/admin/order/order-list/order-list.component.html
+++ b/src/app/admin/order/order-list/order-list.component.html
@@ -57,21 +57,15 @@
                       </td>
                     <td>{{order.quantity}}</td>
                     <td>{{order.CreateDate}}</td>
-                    <td>{{order.status}}</td>
+                    <td>
+                      <a type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-default">
+                        {{order.status}}
+                      </a>
+
+                    </td>
                   </tr>
 
                   </tbody>
-                  <tfoot>
-                  <tr>
-                    <th>STT</th>
-                    <th>Người mua</th>
-                    <th>Tên sản phẩm </th>
-                    <th>Ảnh </th>
-                    <th>Số lượng</th>
-                    <th>Ngày đặt hàng</th>
-                    <th>Trạng thái</th>
-                  </tr>
-                  </tfoot>
                 </table>
               </div>
               <!-- /.card-body -->
@@ -89,11 +83,15 @@
   <!-- /.content-wrapper -->
 
   <app-footer></app-footer>
+<app-order-edit></app-order-edit>
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
     <!-- Control sidebar content goes here -->
   </aside>
+
+
   <!-- /.control-sidebar -->
+
 </div>
 
 
