--- a/src/app/customer/share/sidebar/sidebar.component.html
+++ b/src/app/customer/share/sidebar/sidebar.component.html
@@ -22,18 +22,20 @@
 
   </div>
   <!-- Cart Menu -->
-  <div class="cart-fav-search mb-100">
+  <div class="cart-fav-search mb-50">
     <a href="newhouse/cart" class="cart-nav"><img src="assets/img/core-img/cart.png" alt=""> Giỏ hàng (<span style="color: red">{{cartLengthChild}}</span>)</a>
     <a routerLink="/newhouse/history" class="fav-nav"><img src="assets/img/core-img/favorites.png" alt=""> Đã mua </a>
     <a href="#" class="search-nav"><img src="assets/img/core-img/search.png" alt=""> Tìm Kiếm</a>
   </div>
   <!-- Social Button -->
-  <h4 class="mb-15"> Liên hệ với chúng tôi</h4>
-  <div class="social-info d-flex justify-content-between">
-    <a href="https://zalo.me/0397312493"><img src="assets/img/core-img/zaloLogo.jpg"  width="50px" alt=""></a>
-    <a href="https://zalo.me/0397312493"><img src="assets/img/core-img/ms_logo.png"  width="45px" alt=""></a>
+  <h4 class="mb-15"> Liên hệ:</h4>
+  <div class="mb-15">
+    <a class="" href="https://zalo.me/0375113000"><img src="assets/img/core-img/zaloLogo.jpg"  width="25px" alt="">  Zalo</a>
   </div>
-
+ <div class="mb-15">
+    <a class="mt-30" href="https://www.facebook.com/newhousecanvas"><img src="assets/img/core-img/facebook.png"  width="25px" alt=""> Tranh Treo Tường</a>
+ </div>
+    <a class="mt-100" href="https://www.facebook.com/daldecorloveu"><img src="assets/img/core-img/facebook.png"  width="25px" alt="">  Đồng hồ decor</a>
 
 </header>
 <!-- Header Area End -->
