--- a/src/app/admin/order/order-edit/order-edit.component.html
+++ b/src/app/admin/order/order-edit/order-edit.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Default Modal</h4>
+        <h4 class="modal-title">Trạng thái</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -10,26 +10,17 @@
       <div class="modal-body">
         <form [formGroup]="" >
           <div class="card-body">
-            <div class="form-group">
-              <label for="name">1. Tên tùy chọn </label>
-              <input type="text" class="form-control" id="name" placeholder="Tên tùy chọn" formControlName="name">
-            </div>
-
-
+            <select class="form-control select2" style="width: 100%;" formControlName="status">
+              <option *ngFor="let status of statusList " value="{{status.id}}">{{status.name}}</option>
+            </select>
           </div>
           <!-- /.card-body -->
-
-          <div class="card-footer col-12 align-content-center">
-            <button type="submit" class="btn btn-primary mr-50 width-100">Thêm</button>
-            <a routerLink="/admin/option/list"><button  class="btn btn-primary width-100">Hủy</button></a>
-          </div>
-
 
         </form>
       </div>
       <div class="modal-footer justify-content-between">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <a type="submit" class="btn btn-default" data-dismiss="modal">sửa</a>
+        <a type="text" class="btn btn-default" data-dismiss="modal">Hủy</a>
       </div>
     </div>
     <!-- /.modal-content -->
